# ComfyUI-Zonos

./: .gitmodules  Install.py  LICENSE  README.md  Zonos.py  __init__.py  pyproject.toml
.github/workflows/: publish.yml
example_workflows/: comfy-zonos-example.json  voice.txt
examples/: comfy-zonos-example.json
